# ansible-role-brave

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release-drafter.yml  release.yml  tests.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: Debian.yml  RedHat.yml  main.yml
