[tool.poetry]
name = "ansible-role-brave"
version = "1.0.1"
description = "Ansible role to install Brave browser."
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
